# FaceID

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  env.example  pyproject.toml
app/: main.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 5edb790b8c31_change_owner_to_uploaded_by_in_photo.py  65b5e70ce850_init_migration.py  75cc5d7b6e18_add_owner_to_album.py  8e1bbcf49ffd_initial.py
app/api/: deps.py  main.py
app/api/routes/: albums.py  login.py  photos.py  users.py
app/core/: config.py  exeptions.py
app/db/: crud.py  database.py  models.py  schemas.py
app/face_id/: trash.py  utils.py
app/tests/: conftest.py  test_api.py  test_crud.py
docker/: Dockerfile
docker/compose/: app.yaml  db.yaml  main.yaml  migrations.yaml  tests.yaml
